--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
                         // Check if the game document exists. If not, this user is the host.
                         const docSnap = await getDoc(gameDocRef);
-                        if (!docSnap.exists() || docSnap.data().players.length === 0) {
+                        if (!docSnap.exists()) {
                             isHost = true;
                             await setDoc(gameDocRef, {
                                 status: 'lobby',
@@ -563,26 +563,38 @@
             const playerName = playerNameInput.value.trim();
             if (!playerName) return;
 
-            const docSnap = await getDoc(gameDocRef);
-            if (!docSnap.exists() || docSnap.data().players.length === 0) {
-                isHost = true;
-                await setDoc(gameDocRef, {
-                    status: 'waiting',
-                    players: [{ id: userId, name: playerName, score: 0 }],
-                    currentLetter: null,
-                    roundStartTime: null,
-                    submissions: {},
-                });
-            } else {
-                const existingPlayer = docSnap.data().players.find(p => p.id === userId);
-                if (!existingPlayer) {
+            try {
+                const docSnap = await getDoc(gameDocRef);
+                const gameExists = docSnap.exists();
+                const players = gameExists ? docSnap.data().players : [];
+
+                // Check if this player is already in the game
+                const existingPlayer = players.find(p => p.id === userId);
+
+                if (!gameExists || players.length === 0) {
+                    // This is the first player, so they are the host
+                    isHost = true;
+                    await setDoc(gameDocRef, {
+                        status: 'waiting',
+                        players: [{ id: userId, name: playerName, score: 0 }],
+                        currentLetter: null,
+                        roundStartTime: null,
+                        submissions: {},
+                    });
+                } else if (!existingPlayer) {
+                    // A game exists, and this is a new player
                     await updateDoc(gameDocRef, {
-                        players: arrayUnion({ id: userId, name: playerName, score: 0 })
+                        players: arrayUnion({ id: userId, name: playerName, score: 0 }),
+                        status: 'waiting'
+                    });
+                } else {
+                    // A game exists, and this player is rejoining
+                    await updateDoc(gameDocRef, {
+                        status: 'waiting'
                     });
                 }
-                 await updateDoc(gameDocRef, {
-                    status: 'waiting'
-                });
+            } catch (error) {
+                console.error("Error joining game:", error);
             }
         };
 
