--- a/index.html
+++ b/index.html
@@ -714,3 +714,12 @@
     </script>
 </body>
 </html>
+const firebaseConfig = {
+  apiKey: "AIzaSyD3iQOFs_IfiUq_g9LijaXzfW1oyQx0tok",
+  authDomain: "alphabet-21733.firebaseapp.com",
+  projectId: "alphabet-21733",
+  storageBucket: "alphabet-21733.firebasestorage.app",
+  messagingSenderId: "326233903626",
+  appId: "1:326233903626:web:369a52859933ae374285f3"
+};
+
